14.0.12
-------
(RB=1081339)
Simplifies channel creation failure log message

14.0.11
-------
(RB=1087216)
Resize HTTP/2 connection window to the same size as initial stream windows

14.0.10
------
(RB=1079247)
Request timeout no longer cause an HTTP/2 connection to be destroyed

14.0.9
------
(RB=1066298) Check Certificate Principal Name only when necessary

14.0.8
------
(RB=1071804)
Use "*" as default path in Http2 upgrade requests

(RB=1058650)
Adding ChannelPoolManager Sharing feature

14.0.7
------
(RB=1069384)
Fix filter chain callback to handle errors while building partial response and response. Handle all errors to ensure callback chain is not broken.

14.0.6
------
(RB=1062462)
Fail promise if h2c upgrade or alpn negotiation do not complete before connection closes

(RB=1065376)
TimeoutAsyncPoolHandle to use Optional#ofNullable instead Optional#of to deal with a potentially null value

(RB=1061506)
Expose configuration and fix remote address exception logging to log both exception class and cause

14.0.5
------
(RB=1063802) Fix StackOverflowError introduced in 13.0.1 part 2

14.0.4
------
(RB=1063802) Fix StackOverflowError introduced in 13.0.1

14.0.3
------
(RB=1061506) Fix remote address exception logging to log class instead of cause

14.0.2
------
(RB=1061426)
Logs remote address to stdout if servlet read or write throws exception

14.0.1
------
(RB=1057617)
Enlarge default HTTP/2 client stream flow window size and enable auto refill for connection flow control window

14.0.0
------
(RB=1058380)
Updated BatchCreateResponseEnvelope.CollectionCreateResponseItem with HttpStatus.
Fixed the bug in setting ID for CollectionCreateResponseItem.

13.0.7
------
(RB=1056932)
Include Content-Type on all error responses.

13.0.6
------
(RB=1056963)
Increase HttpClient default shutdown timeout from 5s to 15s

(RB=1058309)
Bump open source plugin to Gradle 4.0

13.0.5
------
(RB=1045941)
Provide Location for BATCH_CREATE.

(RB=1056106)